# sourcerer

./: .env-reference  .gitignore  AGENTS.md  NOTICE.txt  README.md  pyproject.toml  repos.example.yml  requirements.txt
.github/workflows/: release.yml  tests.yml
scripts/: release.sh
src/sourcerer/: cli.py  config.py  indices.py  planner.py  progress.py  queries.py  utils.py  version.py
src/sourcerer/commands/: index.py  prune.py  setup.py
src/sourcerer/commands/benchmark/: command.py  registry.py
src/sourcerer/commands/index/: command.py  documents.py  git.py  markers.py  report.py  runtime.py  selection.py
src/sourcerer/commands/prune/: command.py  execute.py  report.py
src/sourcerer/commands/setup/: command.py
src/sourcerer/elastic/agent_builder_agents/: sourcerer.yml
src/sourcerer/elastic/agent_builder_skills/: sourcerer-code-citations.yml  sourcerer-code-search.yml  sourcerer-ref-resolution.yml  sourcerer-repo-discovery.yml  sourcerer.code-search.yml  sourcerer.repo-discovery.yml
src/sourcerer/elastic/agent_builder_tools/: sourcerer.code.grep.yml  sourcerer.code.search.yml  sourcerer.files.cat.yml  sourcerer.files.head.yml  sourcerer.files.ls.yml  sourcerer.files.read_lines.yml  sourcerer.files.tail.yml  sourcerer.fs.cat.yml  sourcerer.fs.head.yml  sourcerer.fs.ls.yml  (+3 more)
tests/: conftest.py  test_config.py  test_documents.py  test_git.py  test_index_orphans.py  test_indices.py  test_markers.py  test_planner_orphans.py  test_planner_retention.py  test_prune_deletions.py  test_queries.py  test_setup.py  test_utils.py  test_version.py
(+8 files in other folders)
